--- a/default.hbs
+++ b/default.hbs
@@ -13,14 +13,15 @@
     <meta name="description" content="{{meta_description}}" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{asset "css/poole.css"}}">
-    <link rel="stylesheet" href="{{asset "css/syntax.css"}}">
-    <link rel="stylesheet" href="{{asset "css/lanyon.css"}}">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+    <link rel="stylesheet" href="{{asset "css/poole.css"}}" />
+    <link rel="stylesheet" href="{{asset "css/syntax.css"}}" />
+    <link rel="stylesheet" href="{{asset "css/lanyon.css"}}" />
+    <link rel="stylesheet" href="{{asset "css/custom.css"}}" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400" />
 
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.png"}}">
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.png"}}" />
+    <link rel="shortcut icon" href="{{asset "favicon.ico"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
