highlight.js and styles

--- a/default.hbs
+++ b/default.hbs
@@ -23,6 +23,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "apple-touch-icon-precomposed.png"}}" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}" />
 
+    <!-- Highlight js -->
+    <script src="{{asset "js/highlight/highlight.pack.js"}}"></script>
+
+    <link rel="stylesheet" href="{{asset "css/highlight.css"}}" />
+
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
   </head>
