--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,3 +7,9 @@
     margin: 0.5em auto;
     display: block;
 }
+
+article img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
